--- a/project_scaffold/templates/qt5/qml.qml.qrc
+++ b/project_scaffold/templates/qt5/qml.qml.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>main.js</file>
         <file>MainForm.ui.qml</file>
     </qresource>
 </RCC>
