add: use typescript and compile typescript

--- a/project_scaffold/templates/qt5/qml.qml.qrc
+++ b/project_scaffold/templates/qt5/qml.qml.qrc
@@ -2,6 +2,7 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>main.js</file>
+        <file>http_client.js</file>
         <file>MainForm.ui.qml</file>
     </qresource>
 </RCC>
