add: more examples

--- a/project_scaffold/templates/qt5/qml.qml.qrc
+++ b/project_scaffold/templates/qt5/qml.qml.qrc
@@ -4,5 +4,6 @@
         <file>main.js</file>
         <file>http_client.js</file>
         <file>MainForm.ui.qml</file>
+        <file>ToolkitPy_logo.png</file>
     </qresource>
 </RCC>
