update: ui.qml -> .qml

--- a/project_scaffold/templates/qt5/qml.qml.qrc
+++ b/project_scaffold/templates/qt5/qml.qml.qrc
@@ -3,7 +3,7 @@
         <file>main.qml</file>
         <file>main.js</file>
         <file>http_client.js</file>
-        <file>MainForm.ui.qml</file>
+        <file>ExamplePage.qml</file>
         <file>ToolkitPy_logo.png</file>
     </qresource>
 </RCC>
