add: logo for qt exe file

--- a/project_scaffold/templates/qt5/qml.qml.qrc
+++ b/project_scaffold/templates/qt5/qml.qml.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
+        <file>logo.ico</file>
         <file>main.qml</file>
         <file>main.js</file>
         <file>http_client.js</file>
