--- a/toolkit/template/scaffold/project/cpp/qt5/qml/qml.qrc
+++ b/toolkit/template/scaffold/project/cpp/qt5/qml/qml.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
+        <file>frontend/content/main.qml</file>
+        <file>frontend/content/{{ project_slug.pascal_case }}.qml</file>
         <file>logo.ico</file>
     </qresource>
 </RCC>
