fix: avoid duplicate names

--- a/toolkit/template/scaffold/project/cpp/qt5/example/qml/qml.qrc
+++ b/toolkit/template/scaffold/project/cpp/qt5/example/qml/qml.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>{{ project_slug.pascal_case }}.qml</file>
+        <file>{{ project_slug.pascal_case }}Custom.qml</file>
     </qresource>
 </RCC>
